config.json: updated title

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -152,6 +152,5 @@
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
     },
-    "domain": "https://com-xchange-64c4f.netlify.app",
-    "title": "safe"
+    "domain": "https://com-xchange-64c4f.netlify.app"
 }
