--- a/content/data/config.json
+++ b/content/data/config.json
@@ -13,7 +13,7 @@
         "has_secondary_nav": true,
         "secondary_nav_links": [
             {
-                "label": "About",
+                "label": "Why App",
                 "url": "/about",
                 "style": "link"
             },
