config.json: updated label in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -19,7 +19,8 @@
             },
             {
                 "url": "/faq",
-                "style": "link"
+                "style": "link",
+                "label": "Developers"
             },
             {
                 "label": "Blog",
