--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,6 +32,19 @@
                 "url": "/thank-you",
                 "style": "secondary"
             }
+        ],
+        "primary_nav_links": [
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "has_icon": false,
+                "icon": "arrow-left",
+                "icon_position": "right",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
+            }
         ]
     },
     "footer": {
