config.json: updated label in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -61,7 +61,7 @@
         "secondary_nav_title": "Blog",
         "secondary_nav_links": [
             {
-                "label": "News",
+                "label": "Careers",
                 "url": "/blog/category/news",
                 "style": "link"
             },
