config.json: updated label in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -52,7 +52,7 @@
                 "style": "link"
             },
             {
-                "label": "Style Guide",
+                "label": "What we Charge",
                 "url": "/style-guide",
                 "style": "link"
             }
