config.json: updated label in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,7 +28,7 @@
                 "style": "link"
             },
             {
-                "label": "Log in",
+                "label": "Log In",
                 "url": "/thank-you",
                 "style": "secondary"
             }
